src/main/java/com/example/estudio_api/shared/errors/SalaComReservaAtivaException.java
package com.example.estudio_api.shared.errors;

public class SalaComReservaAtivaException extends RuntimeException {
    public SalaComReservaAtivaException(String message) {
        super(message);
    }
    
}
